# prolens

./: CHANGELOG.md  README.md  prolens.cabal  stack.yaml
.github/workflows/: ci.yml
src/: Prolens.hs
test/: Doctest.hs  Spec.hs
test/Test/: Data.hs  Prolens.hs
test/Test/Prolens/: Inspection.hs  Property.hs
