cabal-version:       2.4
name:                prolens
version:             0.0.0.0
synopsis:            Profunctor based lightweight implementation of Lenses
description:
    Profunctor based lightweight implementation of Lenses.
    See [README.md](https://github.com/kowainik/prolens#prolens) for more details.
homepage:            https://github.com/kowainik/prolens
bug-reports:         https://github.com/kowainik/prolens/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kowainik
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2020 Kowainik
category:            Data, Optics, Lenses
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.6.5
                     GHC == 8.8.4
                     GHC == 8.10.2

source-repository head
  type:                git
  location:            https://github.com/kowainik/prolens.git

common common-options
  build-depends:       base >= 4.12.0.0 && < 4.15

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Prolens

test-suite prolens-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  other-modules:       Test.Data
                       Test.Prolens
                       Test.Prolens.Inspection

  build-depends:       prolens
                     , hspec ^>= 2.7.4
                     , inspection-testing ^>= 0.4

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
