cabal-version:       2.4
name:                prolens
version:             0.0.0.1
synopsis:            Profunctor-based lightweight implementation of optics
description:
    Lightweight and performance implementation of optics — lenses, prisms, traversals.
    .
    The library uses hardcore abstractions internally, but provides
    beginner-friendly, composable and convenient interface for working
    with data structures.
homepage:            https://github.com/kowainik/prolens
bug-reports:         https://github.com/kowainik/prolens/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Veronika Romashkina, Dmitrii Kovanikov
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2020-2021 Kowainik
category:            Data, Optics, Lenses
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.6.5
                     GHC == 8.8.4
                     GHC == 8.10.4
                     GHC == 9.0.1

source-repository head
  type:                git
  location:            https://github.com/kowainik/prolens.git

common common-options
  build-depends:       base >= 4.12.0.0 && < 4.16

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

common common-test
  import:              common-options
  hs-source-dirs:      test
  ghc-options:         -threaded

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Prolens

test-suite prolens-test
  import:              common-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs

  other-modules:       Test.Data
                       Test.Prolens
                       Test.Prolens.Property
                       Test.Prolens.Inspection

  build-depends:       prolens
                     , hedgehog  >= 1.0.2 && < 2
                     , hspec ^>= 2.7.4
                     , hspec-hedgehog
                     , inspection-testing ^>= 0.4
  ghc-options:         -rtsopts
                       -with-rtsopts=-N

test-suite doctest
  import:              common-test
  type:                exitcode-stdio-1.0
  main-is:             Doctest.hs
  build-depends:       doctest >= 0.16.3 && < 0.19
